--- a/menu.scss
+++ b/menu.scss
@@ -9,6 +9,15 @@ h1{
     font-family: 'Shrikhand', cursive;
 }
 
+#fleche{
+    position: absolute;
+    margin-top: -58px;
+    margin-left: 20px;
+    i{
+        font-size: 35px;
+    }
+}
+
 #titre{
     font-family: 'Roboto', sans-serif;
 }
