--- a/css/accueil_part_1.scss
+++ b/css/accueil_part_1.scss
@@ -2,6 +2,7 @@
     background-color: #f6f6f6;
     padding-bottom: 20px;
     #accueil_part_1_1{
+        margin-top: -30px;
         p{
             text-align: center;
             background-color: #eaeaea;
@@ -28,18 +29,24 @@
             color: #7d7d7d;
             margin-bottom: 20px;
         }
-        button{
-            display: block;
-            margin: 0 auto;
-            text-align: center;
-            background: linear-gradient(#ff66cc, #9966cc);
-            border: none;
-            padding: 15px;
-            font-size: 18px;
-            color: white;
-            font-family: 'Roboto', sans-serif;
-            border-radius: 25px;
-            width: 250px;
+        a{
+            text-decoration: none;
+            button{
+                display: block;
+                margin: 0 auto;
+                text-align: center;
+                background: linear-gradient(#ff66cc, #9966cc);
+                border: none;
+                padding: 15px;
+                font-size: 18px;
+                color: white;
+                font-family: 'Roboto', sans-serif;
+                border-radius: 25px;
+                width: 250px;
+                &:hover{
+                    cursor: pointer;
+                }
+            }
         }
     }
 }
