--- a/css/accueil_part_3.scss
+++ b/css/accueil_part_3.scss
@@ -21,7 +21,7 @@
             display: block;
             margin: 0 auto;
             background-color: white;
-            padding: 5px;
+            // padding: 5px;
             border-radius: 15px;
             height: 250px;
             width: 85%;
@@ -35,29 +35,41 @@
                 width: 100%;
                 height: 78%;
             }
+            .nouveau{
+                position: absolute;
+                width: 80px;
+                top: 20px;
+                right: 7%;
+                background-color: #99cccc;
+                color: #33cc99;
+                text-align: center;
+                padding: 3px 0;
+            }
             #restaurants_img1{
-                background: url(/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) repeat center center;
+                background: url(images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg) repeat center center;
                 background-size: cover;
             }
             #restaurants_img2{
-                background: url(/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) repeat center center;
+                background: url(images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg) repeat center center;
                 background-size: cover;
             }
             #restaurants_img3{
-                background: url(/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) repeat center center;
+                background: url(images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg) repeat center center;
                 background-size: cover;
             }
             #restaurants_img4{
-                background: url(/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) repeat center center;
+                background: url(images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) repeat center center;
                 background-size: cover;
             }
             h4{
+                padding-left: 5px;
                 color: black;
                 margin: 10px 0 0 5px;
                 font-family: 'Roboto', sans-serif;
                 font-size: 16px;
             }
             p{
+                padding-left: 5px;
                 color: black;
                 margin: 5px 0 0 5px;
                 font-family: 'Roboto', sans-serif;
@@ -66,19 +78,23 @@
             button{
                 float: right;
                 margin-top: -40px;
+                margin-right: 10px;
                 font-family: 'Font Awesome 5 Free';
                 font-size: 30px;
                 border: none;
+                font-weight: normal;
                 i{
                     &:hover{
-                        background-color: linear-gradient(#ff66cc, #9966cc);
-                        font-weight: bold;
-                        // transition: color 1s ease font-weight 1s ease;
                         animation-name: i_hover;
                         animation-duration: 0.75s;
                         animation-timing-function: ease;
                         animation-iteration-count: 1;   
                         animation-fill-mode: forwards;
+                        font-weight: bold;
+                        transform: scale(1);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                        background-image: -webkit-linear-gradient(#ff66cc, #9966cc);
                     }
                     @keyframes i_hover {
                         50% {
@@ -86,8 +102,6 @@
                         }
                         100% {
                             transform: scale(1);
-                            // font-weight: normal;
-                            // color: linear-gradient(#ff66cc, #9966cc);
                         }
                     }
                 }
@@ -96,7 +110,7 @@
             @for $i from 1 through 4 {
                 &:nth-of-type(#{$i}){
                     animation-name: carte_menu_apparition;
-                    animation-delay: 2s + ($i / 2);
+                    animation-delay: 0.75s + ($i / 2);
                     animation-duration: 1s;
                     animation-timing-function: ease;
                     animation-iteration-count: 1;   
@@ -134,7 +148,7 @@
     margin: 0 auto;
     width: 80px;
     height: 80px;
-    margin-top: calc(50% - 40px);
+    margin-top: calc(50vh - 40px);
   }
   .lds_ring div {
     box-sizing: border-box;
