--- a/menu.scss
+++ b/menu.scss
@@ -13,6 +13,8 @@ h1{
     position: absolute;
     margin-top: -58px;
     margin-left: 20px;
+    color: #000;
+    text-decoration: none;
     i{
         font-size: 35px;
     }
